# c99-template

./: .clang-format  .clang-tidy  .directory  CMakeLists.txt  README.md  Taskfile.yml  c.yml  conanfile.py
cmake/: ProjectSettings.cmake  ProjectVersion.cmake
src/: CMakeLists.txt  main.c
src/processing/: CMakeLists.txt  processing.c
tests/: CMakeLists.txt  test_processing.c
